--- a/docs/global.css
+++ b/docs/global.css
@@ -1,16 +1,21 @@
+body {
+  margin: 0;
+  line-height: normal;
+}
+
 :root {
   /* fonts */
   --font-inter: Inter;
   --font-share-tech-mono: "Share Tech Mono";
 
   /* font sizes */
-  --font-size-2xs: 10px;
-  --font-size-xs: 14px;
-  --font-size-sm: 16px;
-  --font-size-base: 22px;
-  --font-size-lg: 26px;
-  --font-size-xl: 30px;
-  --font-size-2xl: 40px;
+  --font-size-sm: 14px;
+  --font-size-3xs: 10px;
+  --font-size-3xl: 22px;
+  --font-size-base: 16px;
+  --font-size-11xl: 30px;
+  --font-size-21xl: 40px;
+  --font-size-7xl: 26px;
 
   /* Colors */
   --white: #fff;
@@ -18,21 +23,23 @@
   --color-whitesmoke: #f8f8f8;
 
   /* Gaps */
-  --gap-xs: 10px;
-  --gap-sm: 25px;
-  --gap-md: 32px;
-  --gap-lg: 64px;
+  --gap-45xl: 64px;
+  --gap-13xl: 32px;
+  --gap-6xl: 25px;
+  --gap-3xs: 10px;
 
   /* Paddings */
-  --padding-4xs: 5px;
   --padding-3xs: 10px;
-  --padding-2xs: 15px;
-  --padding-xs: 20px;
-  --padding-sm: 22px;
-  --padding-md: 32px;
-  --padding-lg: 53px;
-  --padding-xl: 64px;
-  --padding-2xl: 76px;
-  --padding-3xl: 80px;
-  --padding-4xl: 248px;
+  --padding-281xl: 300px;
+  --padding-131xl: 150px;
+  --padding-57xl: 76px;
+  --padding-45xl: 64px;
+  --padding-8xs: 5px;
+  --padding-3xl: 22px;
+  --padding-34xl: 53px;
+  --padding-xl: 20px;
+  --padding-13xl: 32px;
+  --padding-229xl: 248px;
+  --padding-mini: 15px;
+  --padding-61xl: 80px;
 }
