--- a/docs/index.css
+++ b/docs/index.css
@@ -657,36 +657,28 @@
   flex-shrink: 0;
   text-align: center;
 }
-.footer {
-  align-self: stretch;
+.footer,
+.web-background {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  padding: 83px var(--padding-57xl) var(--padding-45xl);
   align-items: center;
   justify-content: flex-start;
+}
+.footer {
+  align-self: stretch;
+  padding: 83px var(--padding-57xl) var(--padding-45xl);
   gap: 44px;
   opacity: 0;
   font-size: var(--font-size-sm);
-}
-.subtract-icon {
-  position: relative;
-  width: 73.49px;
-  height: 130.62px;
-  flex-shrink: 0;
 }
 .web-background {
   position: relative;
   background-color: #000;
   width: 100%;
-  height: 6518px;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
+  height: 6494px;
   padding: 8px 450px var(--padding-3xs);
   box-sizing: border-box;
-  align-items: center;
-  justify-content: flex-start;
   gap: 24px;
   text-align: left;
   font-size: var(--font-size-11xl);
@@ -695,7 +687,7 @@
 }
 @media screen and (max-width: 1200px) {
   .web-background {
-    padding: 4px 9px var(--padding-3xs);
+    padding: 4px var(--padding-131xl) var(--padding-3xs);
     box-sizing: border-box;
     padding-left: var(--padding-3xs);
     padding-right: var(--padding-3xs);
@@ -863,7 +855,7 @@
     box-sizing: border-box;
   }
 }
-@media screen and (max-width: 1500px) and (min-width: 1201px) {
+@media screen and (max-width: 1500px) and (min-width: 1220px) {
   .web-background {
     padding-left: var(--padding-131xl);
     padding-top: 7px;
